# this

./: .gitignore  CMakeLists.txt  LICENSE  README.md  this.code-workspace
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ccpp.yml
inc/core/: app.hpp  asset.hpp  asset_manager.hpp  camera.hpp  color.hpp  core.hpp  gl_window.hpp  glfw_window.hpp  glwindow.h  log.hpp  logo.hpp  math.hpp  mesh.hpp  node.hpp  renderer.hpp  sdl_window.hpp  shader.hpp  uniform.hpp  vector.hpp  visual.hpp  window.hpp
inc/extra/: gltf_importer.hpp  obj_importer.hpp
inc/game/: game_app.hpp
inc/geometry/: cube.hpp  mesh.hpp
inc/nodes/: scene.hpp
inc/rendering/: renderer.hpp
inc/thisGL/: gl_mesh.hpp  gl_program.hpp  gl_renderer.hpp  gl_shader.hpp  gl_types.hpp  gl_window.hpp  glfw_window.hpp
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/shd/: default.frag  default.vert
src/: main.cpp
src/core/: app.cpp  asset.cpp  asset_manager.cpp  camera.cpp  core.hpp  gl_window.cpp  glfw_window.cpp  glfw_window.hpp  glwindow.cpp  log.cpp  logo.cpp  mesh.cpp  node.cpp  renderer.cpp  sdl_window.cpp  shader.cpp  uniform.cpp  visual.cpp  window.cpp
src/demo/: main.cpp
src/extra/: gltf_importer.cpp  obj_importer.cpp
src/game/: game_app.cpp
src/geometry/: cube.cpp  mesh.cpp
src/rendering/: renderer.cpp
src/thisGL/: gl_mesh.cpp  gl_program.cpp  gl_renderer.cpp  gl_shader.cpp  gl_types.cpp  gl_window.cpp  glfw_window.cpp
